<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_net_work_list"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.admin.btwifichat.activity.NetworkListActivity">

    <com.example.admin.btwifichat.widget.TitleLayout
        android:id="@+id/network_title_layout"
        android:layout_width="match_parent"
        android:layout_height="48dp"/>

    <TextView
        android:id="@+id/title_paired_network"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_paired_network"
        android:visibility="gone"
        android:background="#666"
        android:textColor="#fff"
        android:paddingLeft="5dp"
        />
    <ListView
        android:id="@+id/paired_network_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stackFromBottom="true"/>

    <TextView
        android:id="@+id/title_new_network"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_other_network"
        android:visibility="gone"
        android:background="#666"
        android:textColor="#fff"
        android:paddingLeft="5dp"
        />

    <ListView
        android:id="@+id/new_network_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:stackFromBottom="true"
        />

    <Button
        android:id="@+id/scan_network_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_scan_network"/>
</LinearLayout>
